<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundoApp2"
    tools:context="uniandrade.br.edu.com.popseries.views.AjudaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:gravity="start"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="122dp"
                android:layout_height="97dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_ajuda"
                tools:ignore="VectorDrawableCompat"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ajuda:"
                android:textColor="@color/colorWhite"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Tela de login"
                android:textColor="@color/colorWhite"
                android:textSize="16dp"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_flecha_white"/>

            <TextView
                android:id="@+id/TelaLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="25dp"
                android:text="@string/txtTeladeLogin"
                android:textColor="@color/colorWhite" />


            <TextView
                android:drawableStart="@drawable/ic_flecha_white"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Tela de series favoritas"
                android:textColor="@color/colorWhite"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="25dp"
                android:text="@string/txtTeladeSeriesFavoritas"
                android:textColor="@color/colorWhite" />


            <TextView
                android:drawableStart="@drawable/ic_flecha_white"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Tela de series futuras"
                android:textColor="@color/colorWhite"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="25dp"
                android:text="@string/txtTeladeSeriesFuturas"
                android:textColor="@color/colorWhite" />


            <TextView
                android:drawableStart="@drawable/ic_flecha_white"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Tela de perfil"
                android:textColor="@color/colorWhite"
                android:textSize="16dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="25dp"
                android:text="@string/txtTeladePefil"
                android:textColor="@color/colorWhite" />

            <TextView
                android:drawableStart="@drawable/ic_flecha_white"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Tela de cadastro"
                android:textColor="@color/colorWhite"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="25dp"
                android:text="@string/txtTeladeCadastro"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp" />



        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>