<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cinema_1"
    tools:context="uniandrade.br.edu.com.popseries.CadastroActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="352dp"
        android:layout_height="313dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609">


        <EditText
            android:id="@+id/txtUserNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/ic_pessoa"
            android:ems="10"
            android:hint="@string/txtHintNome"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhite" />


        <EditText
            android:id="@+id/txtUserEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/ic_email"
            android:ems="10"
            android:hint="@string/txtHintEmail"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhite" />

        <EditText
            android:id="@+id/txtUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/ic_key"
            android:ems="10"
            android:hint="@string/txtHintSenha"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhite" />


        <EditText
            android:id="@+id/txtUserConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/ic_key"
            android:ems="10"
            android:hint="@string/txtHintConfirmaSenha"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhite" />


        <Button
            android:id="@+id/btnCadastrese"
            android:layout_width="314dp"
            android:layout_height="51dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_background_login"
            android:text="@string/btnCadastrese"
            android:textColor="#64b3f4" />


        <ProgressBar
            android:id="@+id/progressBarLoginGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/LogoView"
        android:layout_width="232dp"
        android:layout_height="158dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718"
        app:srcCompat="@drawable/logo" />


</android.support.constraint.ConstraintLayout>
