<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="uniandrade.br.edu.com.popseries.views.SobreActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarSobre"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.0">


        <ImageView
            android:layout_width="185dp"
            android:layout_height="101dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/logo"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="64dp" />


        <TextView
            android:layout_width="56dp"
            android:layout_height="34dp"
            android:layout_gravity="start"
            android:text="Sobre:"
            android:textColor="@color/fundoApp2"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/txtSobre"
            android:textColor="@color/fundoApp2" />

        <TextView
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="POP Séries APP"
            android:textColor="@color/fundoApp2"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Versão 1.0"
            android:textColor="@color/fundoApp2"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_gravity="start"
            android:layout_marginTop="32dp"
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Criado por:"
            android:textColor="@color/fundoApp2"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:text="@string/txtCriadores"
            android:textColor="@color/fundoApp2"
            android:layout_marginTop="12dp"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCopyright"
            android:textColor="@color/fundoApp2"
            />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>