<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uniandrade.br.edu.com.popseries.views.LoginActivity"
    android:background="@drawable/cinema_login">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="210dp"
                android:layout_height="174dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/imgDescriptionLogo"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:id="@+id/txtUserEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtHintEmail"
                    android:textColorHint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:padding="8dp"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="12dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorWhite"/>

                <EditText
                    android:id="@+id/txtUserPasswordLogin"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtHintSenha"
                    android:textColorHint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:ems="10"
                    android:padding="8dp"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_key"
                    android:drawablePadding="12dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorWhite"/>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnLogin"
                    android:textColor="#64b3f4"
                    android:background="@drawable/btn_background_login"/>

                <android.support.constraint.ConstraintLayout
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:id="@+id/view2"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/colorWhite"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/txt"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center_horizontal"
                        android:text="OU"
                        android:textColor="@color/colorWhite"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/colorWhite"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/txt"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>

                <ProgressBar
                    android:id="@+id/progressBarLoginGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"/>

                <Button
                    android:id="@+id/btnLoginGoogle"
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="12dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnLoginGoogle"
                    android:textAllCaps="false"
                    android:textColor="#64b3f4"
                    android:background="@drawable/btn_background_login"
                    android:drawableStart="@drawable/ic_google"
                    android:drawablePadding="12dp"/>

                <LinearLayout
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Não possui uma conta?"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"/>

                    <TextView
                        android:id="@+id/txtCadastrar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cadastre-se"
                        android:textAlignment="center"
                        android:padding="8dp"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
